skip deploy tag update

--- a/.github/workflows/dev_pipeline.yml
+++ b/.github/workflows/dev_pipeline.yml
@@ -34,7 +34,7 @@ jobs:
     needs: [simple_development_pipeline]
     runs-on: ubuntu-20.04
     steps:
-      - uses: anothrNick/github-tag-action@1.36.0
+      - uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
         if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
