discord notif action added

--- a/.github/workflows/dev_pipeline.yml
+++ b/.github/workflows/dev_pipeline.yml
@@ -40,6 +40,28 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: 'patch'
 
+      - name: Release Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ success() }}
+        with:
+          severity: info
+          details: Release Succeeded!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Release Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ failure() }}
+        with:
+          severity: error
+          details: Release Failed!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Release Cancelled
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ cancelled() }}
+        with:
+          severity: warn
+          details: Release Cancelled!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
       # - name: read context
       #   env:
       #     GITHUB_CONTEXT: ${{ toJson(github) }}
