--- a/.github/workflows/dev_pipeline.yml
+++ b/.github/workflows/dev_pipeline.yml
@@ -41,6 +41,7 @@ jobs:
           DEFAULT_BUMP: 'patch'
 
       - name: Release Success
+        id: release
         uses: rjstone/discord-webhook-notify@v1
         if: ${{ success() }}
         with:
@@ -61,6 +62,7 @@ jobs:
           severity: warn
           details: Release Cancelled!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - run: echo {{ needs.tag_release.release.outputs }}
 
       # - name: read context
       #   env:
