skip deploy update see outputs

--- a/.github/workflows/dev_pipeline.yml
+++ b/.github/workflows/dev_pipeline.yml
@@ -62,7 +62,7 @@ jobs:
           severity: warn
           details: Release Cancelled!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - run: echo {{ needs.tag_release.release.outputs }}
+      - run: echo ${{ needs.tag_release.release.outputs }}
 
       # - name: read context
       #   env:
