notif with custom message

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,7 @@ jobs:
         with:
           severity: error
           details: Deploy Failed!
+          text: Deploy failed
+          footer: Severity error
+          description: ${{ github.event.head_commit }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
