--- a/.github/workflows/healthCheck.yml
+++ b/.github/workflows/healthCheck.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v2
+        if: ${{ contains(join(github.event.commits.*.message, ' '), 'health check') }}
         with:
           # Check the following URLs one by one sequentially
           url: https://uu-todolist.netlify.appdasda/
